force-app/main/default/objects/Causes_of_Action__c/Causes_of_Action__c.object-meta.xml
<CustomObject>
    <description>For Affirmative Litigation, the causes of action that were determined by the litigation.</description>
    <label>Cause of Action</label>
    <nameField>
        <displayFormat>CA-{0000000}</displayFormat>
        <label>Causes of Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Causes of Action</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>