force-app/main/default/objects/Causes_of_Action__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Failure to pay wages 204</fullName>
            </value>
            <value>
                <fullName>Penalties per §210 for violating 204</fullName>
            </value>
            <value>
                <fullName>Minimum Wage Violation §1194</fullName>
            </value>
            <value>
                <fullName>Minimum Wage Violation §1194.2</fullName>
            </value>
            <value>
                <fullName>Minimum Wage Violation §1197.1</fullName>
            </value>
            <value>
                <fullName>Overtime Wages Violation §510</fullName>
            </value>
            <value>
                <fullName>Overtime Wage Violation  §558</fullName>
            </value>
            <value>
                <fullName>Failure to Provide Meal Period §510</fullName>
            </value>
            <value>
                <fullName>Failure to Provide Meal Period §558</fullName>
            </value>
            <value>
                <fullName>Failure to Provide Rest Period IWC Order §12</fullName>
            </value>
            <value>
                <fullName>Failure to Provide Rest Period §558</fullName>
            </value>
            <value>
                <fullName>Violation of Split Shift Premium ‐ IWC Order §4(c)</fullName>
            </value>
            <value>
                <fullName>Violation of Split Shift Premium ‐ penalty</fullName>
            </value>
            <value>
                <fullName>Violation of Reporting Time Pay ‐ IWC Order §5</fullName>
            </value>
            <value>
                <fullName>Waiting Time Penalties §203</fullName>
            </value>
            <value>
                <fullName>Statutory Penalties §203.1</fullName>
            </value>
            <value>
                <fullName>Non‐negotiable wage payment §212</fullName>
            </value>
            <value>
                <fullName>Kickbacks §221</fullName>
            </value>
            <value>
                <fullName>Penalties per §225.5 for §212/§221 violation</fullName>
            </value>
            <value>
                <fullName>Itemized Wage Stmt §226(a)</fullName>
            </value>
            <value>
                <fullName>Itemized Wage Stmt §226(e)</fullName>
            </value>
            <value>
                <fullName>WARN Act violation §1402</fullName>
            </value>
            <value>
                <fullName>WARN Act violation §1403</fullName>
            </value>
            <value>
                <fullName>Indemnification for business expenses §2802</fullName>
            </value>
            <value>
                <fullName>Contract Obligations_§2810</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>